<resources>
    <string name="app_name" translatable="false">AppStore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="oldAppStoreFound">Old AppStore found,\ndo you want to delete it?</string>
    <string name="home">Home</string>
    <string name="title_activity_app_screen">AppScreen</string>
    <string name="delete">DELETE</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Settings</string>
    <string name="title_notifications">Notifications</string>
    <string name="text_version">Version</string>
    <string name="text_search_at_start">Show Google Apps on start</string>
    <string name="text_colored_navbar">Colored Navigationbar</string>
    <string name="text_swipe_snackbar">removed from notifications!</string>
    <string name="text_blur_dialog">blur Dialog</string>
    <string name="text_check_update">Check update</string>
    <string name="text_touch_to_update">Touch again to download Update</string>
    <string name="text_latest_version">Latest version</string>
    <string name="text_click_check">Click to check for updated</string>
    <string name="text_api_key">API Key</string>
    <string name="text_not_set">Not set</string>
    <string name="text_github">DerTyp7214 on GitHub</string>
    <string name="text_googleplus">Josua Lengwenath on Google+</string>
    <string name="text_sourcecode">App Source Code on GitHub</string>
    <string name="text_appdetails">App Details</string>
    <string name="text_social">Social</string>
    <string name="text_prefs">Preferences</string>
    <string name="text_dark_theme">Dark Theme</string>
    <string name="text_donate">Donate</string>
    <string name="text_donate_sub">Donate me on PayPal</string>
    <string name="text_root_install">Install Apps with root</string>
    <string name="text_dev_mode">Dev mode</string>
    <string name="text_style">Style</string>
    <string name="text_color">Color</string>
    <string name="text_open">Open</string>
    <string name="text_install">Install</string>
    <string name="text_uninstall">Uninstall</string>
    <string name="text_update">Update</string>
    <string name="text_size">Size</string>
    <string name="notification_canceled">Canceled</string>
    <string name="notification_cancel">Cancel</string>
    <string name="notification_downloading">Downloading</string>
    <string name="notification_download">Download</string>
    <string name="notification_max_downloads">Max Downloads</string>
    <string name="notification_connection_error">Connection Error</string>
    <string name="notification_server_error">Server Error</string>
    <string name="notification_finished">Finished</string>
    <string name="popup_error">Not clickable link!</string>
    <string name="popup_close">Close</string>
    <string name="popup_ok">OK</string>
    <string name="adapter_loading">Loading</string>
    <string name="input_hint">Search</string>
    <string name="load_more">Load more</string>
    <string name="description">Description</string>
    <string name="versions">Versions</string>
    <string name="large_text">Text</string>
    <string name="server_offline">Server is Offline</string>
    <string name="no_connection">No internet connection</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="askForUninstallOldAppstore">Don\'t ask me to remove the old AppStore</string>
    <string name="text_pay">Pay</string>
    <string name="text_amount">Amount</string>
    <string name="payment_lang">USD</string>
    <string name="text_pay_amount">Donate %s</string>
    <string name="text_pay_content">Do you want to Donate?</string>
    <string name="currency">$</string>
    <string name="text_build_type">Build Type</string>
    <string name="text_loading">Loading</string>
    <string name="text_can_not_check">Can not check for Update</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registered! Log me in.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Full Name</string>
    <string name="bye">Bye</string>
    <string name="pref_name">Account Details</string>
    <string name="key_pref_name">pref_name</string>
    <string name="app_name_auth">AppStore Account</string>
    <string name="text_installed_apps">Installed Apps</string>
    <string name="my_apps">My Apps</string>
    <string name="text_logout">Logout</string>
    <string name="text_settings">Settings</string>
    <string name="text_modules">Modules</string>
    <string name="text_change_profile_pic">Change Profile Picture</string>
    <string name="text_user_preferences">Usersettings</string>
    <string name="splash_checkLogin">checking if user is logged in</string>
    <string name="splash_getUserData">get userdata</string>
    <string name="splash_getUserImage">loading userimage</string>
    <string name="splash_synsPreferences">syncing preferences</string>
    <string name="splash_writePreferences">writing preferences (%s)</string>
    <string name="splash_finished">finished</string>
    <string name="splash_applying">applying changes</string>
    <string name="text_hide_icon">Hide App Icon</string>
    <string name="text_debug">Debug</string>
    <string name="search_bar_radius">Search Bar Radius</string>
    <string name="language_model">en-US</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="text_profile_of">Profile of: %s</string>
    <string name="text_libraries">Libraries</string>
    <string name="text_main_author">Lead developer</string>
    <string name="text_licenses">Licenses</string>
    <string name="text_josua_lengwenath" translatable="false">Josua Lengwenath</string>
    <string name="text_dertyp7214" translatable="false">DerTyp7214</string>
    <string name="text_authors">developer</string>
    <string name="text_translations">Translations</string>
    <string name="text_spainish">Spanish</string>
    <string name="text_enol_simon" translatable="false">enoler</string>
    <string name="text_english">English</string>
    <string name="text_german">German</string>
    <string name="text_error_data">Error loading data!</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="text_changes">Changes</string>
    <string name="text_project_github">Project on GitHub</string>
    <string name="url_github_project" translatable="false">https://github.com/DerTyp7214/NewAppStore</string>
    <string name="text_change_bg_pic">Change wallpaper</string>
    <string name="mal_title_about">About</string>
    <string name="mal_title_licenses">Licenses</string>
    <string name="mal_close">Close</string>
    <string name="mal_send_email">Send email</string>
    <string name="mal_activity_exception">No apps to handle action</string>
    <string name="license_apache2" translatable="false">
        "\nCopyright %1$s %2$s\n"

        "\nLicensed under the Apache License, Version 2.0 (the \"License\");"
        "you may not use this file except in compliance with the License."
        "You may obtain a copy of the License at\n"

        "\nhttp://www.apache.org/licenses/LICENSE-2.0\n"

        "\nUnless required by applicable law or agreed to in writing, software"
        "distributed under the License is distributed on an \"AS IS\" BASIS,"
        "WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied."
        "See the License for the specific language governing permissions and"
        "limitations under the License."
    </string>
    <string name="license_mit" translatable="false">
        "\nMIT License\n"

        "\nCopyright © %1$s %2$s\n"

        "\nPermission is hereby granted, free of charge, to any person obtaining a copy"
        "of this software and associated documentation files (the "Software"), to deal"
        "in the Software without restriction, including without limitation the rights"
        "to use, copy, modify, merge, publish, distribute, sublicense, and/or sell"
        "copies of the Software, and to permit persons to whom the Software is"
        "furnished to do so, subject to the following conditions:\n"

        "\nThe above copyright notice and this permission notice shall be included in all"
        "copies or substantial portions of the Software.\n"

        "\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR"
        "IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,"
        "FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE"
        "AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER"
        "LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,"
        "OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE"
        "SOFTWARE."
    </string>
</resources>