<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * Copyright (c) 2018.
  ~  * Created by Josua Lengwenath
  ~  */
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relative"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/demo"
    android:backgroundTint="@color/LightTransparentBlack"
    android:backgroundTintMode="src_over"
    android:contentDescription="@string/todo">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/user_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/nav_header_desc"
        android:transitionName="profilePic"
        app:civ_border_color="#50000000"
        app:civ_border_width="2dp" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/app_name"
        android:textColor="@color/grey_400"
        android:textSize="18sp"
        android:transitionName="name" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:textColor="@color/grey_400"
        android:textSize="14sp"
        android:transitionName="email" />

</RelativeLayout>